force-app/main/default/objects/Order/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Shipping carrier name (e.g. FedEx, UPS, USPS).</description>
    <label>Carrier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>