force-app/main/default/objects/Order/fields/Expected_ETA__c.field-meta.xml
<CustomField>
    <fullName>Expected_ETA__c</fullName>
    <description>Expected estimated date of arrival for the order shipment.</description>
    <label>Expected ETA</label>
    <type>Date</type>
</CustomField>