force-app/main/default/objects/Order/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Carrier tracking number for the shipment.</description>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>